--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -34,12 +34,12 @@ codesign/digest_algorithm=1
 codesign/description=""
 codesign/custom_options=PackedStringArray()
 application/modify_resources=true
-application/icon="uid://bxvquo7i0vgfo"
-application/console_wrapper_icon=""
+application/icon="uid://bv3n1ytpl7g71"
+application/console_wrapper_icon="uid://bv3n1ytpl7g71"
 application/icon_interpolation=4
 application/file_version=""
 application/product_version=""
-application/company_name="Dillaball"
+application/company_name="Dillaballers"
 application/product_name="Dillaball"
 application/file_description=""
 application/copyright=""
